<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bgapps"
    tools:context=".Activity.StatusPengerjaanActivity">

    <TextView
        android:id="@+id/txtstatusheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Status Pengerjaan"
        android:textColor="@android:color/black"
        android:textSize="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:columnCount="1"
                android:rowCount="7"
                android:alignmentMode="alignMargins"
                android:columnOrderPreserved="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_kalkulator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:id="@+id/mapelindo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:text="@string/mapelindo"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/txtstatusbindo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:text="Belum Selesai"
                            android:textSize="24sp"
                            android:layout_below="@+id/mapelindo"/>

                        <ImageView
                            android:id="@+id/imgstatusbindo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"/>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:id="@+id/mapelmtk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:text="@string/mapelmtk"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/txtstatusmtk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:text="Belum Selesai"
                            android:textSize="24sp"
                            android:layout_below="@+id/mapelmtk"/>

                        <ImageView
                            android:id="@+id/imgstatusmatematika"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"/>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:id="@+id/mapelpkn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:text="@string/mapelpkn"
                            android:textSize="24sp"
                            android:layout_toLeftOf="@+id/imgstatuspkn"/>

                        <TextView
                            android:id="@+id/txtstatuspkn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:text="Belum Selesai"
                            android:textSize="24sp"
                            android:layout_below="@+id/mapelpkn"/>

                        <ImageView
                            android:id="@+id/imgstatuspkn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"/>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:id="@+id/mapelipa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:text="@string/mapelipa"
                            android:textSize="24sp"
                            android:layout_toLeftOf="@+id/imgstatusipa"/>

                        <TextView
                            android:id="@+id/txtstatusipa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:text="Belum Selesai"
                            android:textSize="24sp"
                            android:layout_below="@+id/mapelipa"/>

                        <ImageView
                            android:id="@+id/imgstatusipa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"/>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:id="@+id/mapelips"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:text="@string/mapelips"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/txtstatusips"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:text="Belum Selesai"
                            android:textSize="24sp"
                            android:layout_below="@+id/mapelips"/>

                        <ImageView
                            android:id="@+id/imgstatusips"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"/>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:id="@+id/mapelsbdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:text="@string/mapelsbdp"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/txtstatussbdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:text="Belum Selesai"
                            android:textSize="24sp"
                            android:layout_below="@id/mapelsbdp"/>

                        <ImageView
                            android:id="@+id/imgstatussbdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"/>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:id="@+id/mapelpjok"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:text="@string/mapelpjok"
                            android:textSize="24sp"
                            android:layout_toLeftOf="@+id/imgstatuspjok"/>

                        <TextView
                            android:id="@+id/txtstatuspjok"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:text="Belum Selesai"
                            android:textSize="24sp"
                            android:layout_below="@+id/mapelpjok"/>

                        <ImageView
                            android:id="@+id/imgstatuspjok"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"/>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </GridLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>